test/functions/iterators/bradc/badzip/rangeSizeMismatch.good
rangeSizeMismatch.chpl:1: error: zippering iterators of incompatible size
