test/functions/iterators/bradc/badzip/rangeSizeMismatch.chpl
forall (i,j) in zip(1..3, 1..4) do
  writeln(i,j);

